# bevprog_konzi

./: CMakeLists.txt  adat.txt  beugro_2122.cpp  beugro_2122_1.cpp  beugro_2122_2.cpp  bevprog_2122_v1.cpp  feladat.txt  main.cpp  main2.cpp
